# fmi-gc

./: .gitignore  CMakeLists.txt
curs1/: 00_test_version.cpp  main.cpp  main.extended.cpp
curs2/: 02_01_poligoane.cpp  02_02_poligon_stippled.cpp  02_03_poligoane_quads.cpp  02_04_hexagon.cpp  README.md  main.cpp
laborator1/: README.md
laborator1/examples/: 00_test_version.cpp  01_01_exemplu.cpp
laborator2/: README.md  main.cpp
laborator2/examples/: 02_01_poligoane.cpp  02_02_poligon_stippled.cpp  02_03_poligoane_quads.cpp
shaders/: example.frag  example.vert  main.shadersl.cpp
shaders/src/: imageloader.cpp  loadShaders.cpp
